--- a/rootedDevice Threat/batteryBooster/android/app/src/main/AndroidManifest.xml
+++ b/rootedDevice Threat/batteryBooster/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
   <!-- These require runtime permissions on M -->
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
+
   <!-- END OPTIONAL PERMISSIONS -->
 
   <queries>
