--- a/SQLite_related/rkstoragedemo/android/app/build.gradle
+++ b/SQLite_related/rkstoragedemo/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.victimapp"
+    namespace "com.rkstoragedemo"
     defaultConfig {
-        applicationId "com.victimapp"
+        applicationId "com.rkstoragedemo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -102,12 +102,6 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-        release {
-            storeFile file('/Users/nictjh/Downloads/ahmad-release-key.keystore')
-            storePassword 'nicholas'
-            keyAlias 'ahmad-release'
-            keyPassword 'nicholas'
-        }
     }
     buildTypes {
         debug {
@@ -116,7 +110,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
